variants: add new variants to customize builds even more
diabled for ios and android:
  gtk, python, clutter
enabled for linux:
  x11, alsa, pulse, cdparanoia, v4l2

--- a/config/android.config
+++ b/config/android.config
@@ -8,6 +8,8 @@ from cerbero.config import Architecture, DistroVersion
 from cerbero.errors import FatalError
 import cerbero.utils.messages as m
 
+variants += ['nogtk', 'noclutter', 'nopython', 'notestspackage']
+
 if not toolchain_prefix:
     toolchain_prefix = os.path.join(home_dir, 'android-ndk-r9')
 
