--- a/config/linux.config
+++ b/config/linux.config
@@ -6,6 +6,21 @@
 import os
 from cerbero.config import Architecture
 
+if 'noalsa' not in variants:
+    variants.append('alsa')
+if 'nox11' not in variants:
+    variants.append('x11')
+if 'nopulse' not in variants:
+    variants.append('pulse')
+if 'nocdparanoia' not in variants:
+    variants.append('cdparanoia')
+if 'nov4l2' not in variants:
+    variants.append('v4l2')
+if 'nosdl' not in variants:
+    variants.append('sdl')
+if 'nogtk' not in variants:
+    variants.append('gtk')
+
 for f in ['CFLAGS', 'CCASFLAGS', 'CXXFLAGS', 'LDFLAGS', 'OBJCFLAGS']:
     os.environ[f] = os.environ.get(f, '')
 
