--- a/config/ios.config
+++ b/config/ios.config
@@ -8,6 +8,8 @@ from cerbero.utils import shell
 from cerbero.config import Architecture, DistroVersion
 from cerbero.errors import FatalError
 
+variants += ['nogtk', 'noclutter', 'nopython', 'notestspackage']
+
 # We don't want anything from macports detected in configure and
 # used later. System libs are passed through the -isysroot option
 allow_system_libs=False
