Add missing env variables for common build tools

--- a/config/darwin.config
+++ b/config/darwin.config
@@ -81,6 +81,15 @@ for f in ['CFLAGS', 'CCASFLAGS', 'CXXFLAGS', 'OBJCFLAGS']:
 
 os.environ['LDFLAGS'] += ' %s %s ' % (arch_ldflags, sdk)
 
+os.environ['STRIP'] = 'strip'
+os.environ['LD'] = 'ld'
+os.environ['AR'] = 'ar'
+os.environ['RANLIB'] = 'ranlib'
+os.environ['NM'] = 'nm'
+os.environ['OBJCOPY'] = 'objcopy'
+os.environ['CC'] = 'gcc'
+os.environ['CXX'] = 'g++'
+
 # Link GL headers
 gl_headers = os.path.join(sdk_root, 'usr', 'X11', 'include', 'GL')
 if not os.path.exists(gl_headers):
