--- a/config/linux.config
+++ b/config/linux.config
@@ -27,6 +27,15 @@ os.environ['LDFLAGS'] += arch_flags
 os.environ['am_cv_python_pyexecdir'] = '%s/%s/site-packages' % (prefix, py_prefix)
 os.environ['am_cv_python_pythondir'] = '%s/%s/site-packages' % (prefix, py_prefix)
 
+os.environ['CC'] = 'gcc'
+os.environ['CXX'] = 'g++'
+os.environ['STRIP'] = 'strip'
+os.environ['LD'] = 'ld'
+os.environ['AR'] = 'ar'
+os.environ['RANLIB'] = 'ranlib'
+os.environ['NM'] = 'nm'
+os.environ['OBJCOPY'] = 'objcopy'
+
 if use_ccache:
     comp = os.environ.get('CC', 'gcc')
     if not 'ccache' in comp:
