windows: define _WIN32_WINNT in cflags too

--- a/config/windows.config
+++ b/config/windows.config
@@ -46,7 +46,7 @@ os.environ['OBJCFLAGS'] = '-Wall -g -O2 '
 ccache = use_ccache and 'ccache ' or ''
 
 # Toolchain environment
-os.environ['CFLAGS'] += "-DWINVER=0x0501"
+os.environ['CFLAGS'] += "-DWINVER=0x0501 -D_WIN32_WINNT=0x0501"
 os.environ['LIBRARY_PATH'] = "%s/lib" % prefix
 os.environ['CXXFLAGS']=os.environ['CFLAGS']
 os.environ['CC']= '%s%s' % (ccache, cmd('gcc'))
