linux: set armv7 cflags correctly

--- a/config/linux.config
+++ b/config/linux.config
@@ -18,6 +18,8 @@ elif target_arch == Architecture.X86_64:
     arch_flags += ' -m64 '
     _host = 'x86_64-linux-gnu'
 if target_arch in [Architecture.ARM, Architecture.ARMv7]:
+    if target_arch == Architecture.ARMv7:
+       arch_flags += ' -march=armv7-a '
     _host = 'arm-linux-gnueabi'
     tools_prefix = 'arm-linux-gnueabi-'
     os.environ['glib_cv_stack_grows'] = 'no'
