linux: add initial support for ARM cross-compilation

--- a/config/linux.config
+++ b/config/linux.config
@@ -9,12 +9,21 @@ from cerbero.config import Architecture
 for f in ['CFLAGS', 'CCASFLAGS', 'CXXFLAGS', 'LDFLAGS', 'OBJCFLAGS']:
     os.environ[f] = os.environ.get(f, '')
 
+arch_flags = ''
+tools_prefix = ''
 if target_arch == Architecture.X86:
-    arch_flags = ' -m32 '
+    arch_flags += ' -m32 '
     _host = 'i686-linux-gnu'
-else:
-    arch_flags = ' -m64 '
+elif target_arch == Architecture.X86_64:
+    arch_flags += ' -m64 '
     _host = 'x86_64-linux-gnu'
+if target_arch in [Architecture.ARM, Architecture.ARMv7]:
+    _host = 'arm-linux-gnueabi'
+    tools_prefix = 'arm-linux-gnueabi-'
+    os.environ['glib_cv_stack_grows'] = 'no'
+    os.environ['glib_cv_uscore'] = 'no'
+    os.environ['ac_cv_func_posix_getgrgid_r'] = 'yes'
+    os.environ['ac_cv_func_posix_getpwuid_r'] = 'yes'
 
 if host is None and target_arch != arch:
     host = _host
@@ -27,14 +36,19 @@ os.environ['LDFLAGS'] += arch_flags
 os.environ['am_cv_python_pyexecdir'] = '%s/%s/site-packages' % (prefix, py_prefix)
 os.environ['am_cv_python_pythondir'] = '%s/%s/site-packages' % (prefix, py_prefix)
 
-os.environ['CC'] = 'gcc'
-os.environ['CXX'] = 'g++'
-os.environ['STRIP'] = 'strip'
-os.environ['LD'] = 'ld'
-os.environ['AR'] = 'ar'
-os.environ['RANLIB'] = 'ranlib'
-os.environ['NM'] = 'nm'
-os.environ['OBJCOPY'] = 'objcopy'
+def cmd(command):
+    return '%s%s' % (tools_prefix, command)
+
+os.environ['CC']= cmd('gcc')
+os.environ['CXX']= cmd('g++')
+os.environ['LD']= cmd('ld')
+os.environ['CPP']= cmd('cpp')
+os.environ['RANLIB']= cmd('ranlib')
+os.environ['AR']= cmd('ar')
+os.environ['AS']= cmd('as')
+os.environ['NM']= cmd('nm')
+os.environ['STRIP']= cmd('strip')
+os.environ['OBJCOPY']= cmd('objcopy')
 
 if use_ccache:
     comp = os.environ.get('CC', 'gcc')
