--- a/config/android.config
+++ b/config/android.config
@@ -8,7 +8,7 @@ from cerbero.config import Architecture, DistroVersion
 from cerbero.errors import FatalError
 import cerbero.utils.messages as m
 
-variants += ['nogtk', 'noclutter', 'nopython', 'notestspackage']
+variants += ['nogtk3', 'noclutter', 'nopython', 'notestspackage']
 
 if not toolchain_prefix:
     toolchain_prefix = os.path.join(home_dir, 'android-ndk-r9d')
