--- a/config/ios.config
+++ b/config/ios.config
@@ -8,7 +8,7 @@ from cerbero.utils import shell
 from cerbero.config import Architecture, DistroVersion
 from cerbero.errors import FatalError
 
-variants += ['nogtk', 'noclutter', 'nopython', 'notestspackage']
+variants += ['nogtk3', 'noclutter', 'nopython', 'notestspackage']
 
 # We don't want anything from macports detected in configure and
 # used later. System libs are passed through the -isysroot option
