gtk3: disable variant by default
and enable it only in supported platforms

--- a/config/linux.config
+++ b/config/linux.config
@@ -18,8 +18,10 @@ if 'nov4l2' not in variants:
     variants.append('v4l2')
 if 'nosdl' not in variants:
     variants.append('sdl')
-if 'nogtk' not in variants:
-    variants.append('gtk')
+if 'nogtk2' not in variants:
+    variants.append('gtk2')
+if 'nogtk3' not in variants:
+    variants.append('gtk3')
 if 'nogi' not in variants:
     variants.append('gi')
 
